list shouts as a table

--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,21 @@
       <div class="loading">
         <img src="loading.gif" alt="loading.gif">
       </div>
-      <div class="shouts">
-        
-      </div>
+      <br>
+      <div class="tabular">
+      <table class="u-half-width">
+        <thead>
+          <tr style="text-align: center;">
+            <th style="text-align:inherit;">Name</th>
+            <th style="text-align: inherit;">Shout</th>
+            <th style="inherit;"">When</th>
+          </tr>
+        </thead>
+        <tbody class="shouts">
+        </tbody>
+
+      </table>
+    </div>
     </main>
     <script src="client.js"></script>
   </body>
