pagination and tabular style

--- a/client/index.html
+++ b/client/index.html
@@ -29,10 +29,10 @@
       <div class="tabular">
       <table class="u-half-width">
         <thead>
-          <tr style="text-align: center;">
-            <th style="text-align:inherit;">Name</th>
-            <th style="text-align: inherit;">Shout</th>
-            <th style="inherit;"">When</th>
+          <tr>
+            <th>Name</th>
+            <th>Shout</th>
+            <th>When</th>
           </tr>
         </thead>
         <tbody class="shouts">
@@ -40,6 +40,9 @@
 
       </table>
     </div>
+    <div class="button-container">
+      <button id="loadMoreButton" class="button-secondary" style="visibility: hidden">Load more shouts...</button>
+
     </main>
     <script src="client.js"></script>
   </body>
